manifest_files/ingress-based/microservice-dummy/ingressclass/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: basket-service
  labels:
    app: basket
spec:
  selector:
    app: basket
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: catalog-service
  labels:
    app: catalog
spec:
  selector:
    app: catalog
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP        
---
apiVersion: v1
kind: Service
metadata:
  name: identity-service
  labels:
    app: identity
spec:
  selector:
    app: identity
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  labels:
    app: order
spec:
  selector:
    app: order
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
