manifest_files/ingress-based/microservice-dummy/ingressclass/eshopingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-rewrite
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /something(/|$)(.*)
            pathType: Prefix 
            backend:
              service:
                name: basket-service
                port: 
                  number: 80
          - path: /something(/|$)(.*)
            pathType: Prefix 
            backend:
              service:
                name: catalog-service
                port: 
                  number: 80
          - path: /something(/|$)(.*)
            pathType: Prefix 
            backend:
              service:
                name: identity-service
                port: 
                  number: 80 
          - path: /something(/|$)(.*)
            pathType: Prefix 
            backend:
              service:
                name: oeder-service
                port: 
                  number: 80
